# zakoni.domovina.ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 01-izvor-podataka-nn.md  02-arhitektura.md  03-plan-faza.md  04-backfill-runbook.md  05-plan-punog-backfilla.md  06-nalazi-i-otvorena-pitanja.md  07-napredak-backfilla.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/scripts/: deploy.sh
frontend/src/: main.tsx
frontend/src/components/: Oznake.tsx
frontend/src/lib/: data.ts  types.ts
frontend/src/routes/: Akt.tsx  Godina.tsx  Home.tsx  Layout.tsx
prompts/: 00-kontekst.md  01-scaffold.md  02-ingest-pipeline.md  03-backfill.md  04-export-otvoreni-podaci.md  05-clickhouse-rag.md  06-magisterium-analiza.md  07-handoff-backfill.md  08-handoff-backfill-2022-1990.md
scripts/: 00_katalog.py  01_enumerate.py  01_sitemap.py  02_fetch_rdf.py  03_fetch_html.py  04_parse.py  05_build_fts.py  06_stats.py  07_export_static.py  09_migracija_akti.py  10_backfill.py
src/: __init__.py  db.py  nn_client.py
