[project]
name = "zakoni-domovina-ai"
version = "0.1.0"
description = "Otvoreni katalog akata sluzbenog dijela Narodnih novina"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "lxml>=5.2",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false
